--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: searchable_textfeild
 description: "A simple textfeild which can be used to search the data in the list or can be used as simple dropdown widget"
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/HKAY1/searchable_textfield
+repository: https://github.com/HKAY1/searchable_textfield
 
 environment:
   sdk: ^3.7.0
