--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   searchable_textfeild:
     path: ../
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
